<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_create_album"
        android:icon="@drawable/ic_create_album"
        android:title="@string/tittle_add_album" />
    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/ic_albums"
        android:title="@string/title_albums" />
    <item
        android:id="@+id/navigation_collectors"
        android:icon="@drawable/ic_collectors"
        android:title="@string/title_collectors" />
    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/ic_artists_black_24dp"
        android:title="@string/title_artists" />

</menu>