...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                tools:listitem="@layout/track_item">
            </androidx.recyclerview.widget.RecyclerView>
                <Button
                    android:id="@+id/btn_add_track"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/add_track"/>
                <Button
                    android:id="@+id/btn_back"
...
